# tcp-client-server

./: CMakeLists.txt  README.md  build.sh
client/: 1.sh  CMakeLists.txt  main.cpp  runClient.sh
libTLV/: Socket.cpp  Socket.h  TVLEncoder.cpp  TVLEncoder.h
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp  runServer.sh
tests/: CMakeLists.txt  runTest.sh  tests.cpp
win build/: win build.sln
win build/client/: client.vcxproj  client.vcxproj.filters
win build/server/: server.vcxproj  server.vcxproj.filters
